# linux-keylogger

./: CMakeLists.txt  README.md  main.c
include/: keylogger.h
include/proc_bus_input_devices/: proc_bus_input_device_processor.h  proc_bus_input_devices_parser.h
src/: keylogger.c
src/dev_input_events/: dev_input_events_listener.c
src/proc_bus_input_devices/: proc_bus_input_device_parser.c  proc_bus_input_device_processor.c
